<resources>
    <string name="app_name">DDD-9-ANSAYO-ANDROID</string>

    <!--  공통  -->
    <string name="category">%s ∙ %s</string>
    <string name="rating">%d/5 (%d건)</string>
    <string name="course">코스</string>
    <string name="place">장소</string>

    <!--  로그인  -->
    <string name="login_title">깨코와 함께 동네 정복하기</string>
    <string name="login_content">다른 사람에게 코스를 추천 받고\n나도 방문한 코스를 기록하고 추천할 수 있어요!</string>


    <!--  메인  -->
    <string name="home">홈</string>
    <string name="my_record">내 기록</string>
    <string name="favorite">관심 목록</string>
    <string name="my_page">마이페이지</string>

    <!--  코스 작성  -->
    <string name="course_create">코스 작성하기</string>
    <string name="course_title"><![CDATA[코스 제목<font color="#FF2207>*</font>]]></string>
    <string name="course_title_hint">코스 제목을 입력해주세요.</string>
    <string name="course_description">코스 설명</string>
    <string name="course_description_hint">코스에 대해서 간단히 설명해주세요.</string>
    <string name="place_review_hint">장소에 대해서 간단히 리뷰해주세요.</string>
    <string name="course_date_hint">날짜 추가</string>
    <string name="add_place">장소 추가하기</string>
    <string name="add_first_place_description">다녀온 장소의 기록을 남겨 주세요</string>
    <string name="complete_write">작성 완료</string>
    <string name="course_visibility">기록 공개</string>
    <string name="warning_course_title_max_length">코스 제목은 30자 이내로 작성할 수 있어요.</string>
    <string name="warning_course_description_max_length">코스 설명은 300자 이내로 작성할 수 있어요.</string>
    <string name="warning_place_review_max_length">장소 리뷰는 300자 이내로 작성할 수 있어요.</string>
    <string name="course_place_image_count">%d/%d</string>

    <!--  코스 작성하기 - 장소 검색하기  -->
    <string name="show_detail">상세보기</string>

    <!--  이미지 뷰어  -->
    <string name="count_per_total_count">%d / %d</string>

    <!--  내 기록  -->
    <string name="my_record_write_guide_title">추억하고 싶은 코스가 있나요?</string>
    <string name="my_record_write_guide_description">나의 발자취를 남겨 보세요.</string>
    <string name="course_write">코스 기록하기</string>

    <!--  관심 목록  -->
    <string name="no_favorite_course_title"><![CDATA[관심 목록에 <font color="#F37704">찜한 코스</font>가 없어요]]></string>
    <string name="no_favorite_course_description">깨고 싶은 코스에 하트를 눌러주세요!</string>
    <string name="no_favorite_place_title"><![CDATA[관심 목록에 <font color="#F37704">찜한 장소</font>가 없어요]]></string>
    <string name="no_favorite_place_description">깨고 싶은 장소에 하트를 눌러주세요!</string>
    <string name="find_course">코스 발견하기</string>
    <string name="find_place">장소 발견하기</string>

    <!--  검색  -->
    <string name="input_search_keyword">검색해 주세요.</string>
    <string name="search_course_no_result">다른 사람들을 위해 코스를 기록해 주세요.</string>
    <string name="search_result_not_found_place">"%s에 대한\n장소 검색 결과가 없어요."</string>
    <string name="search_result_not_found_course">"%s에 대한\n장소 코스 결과가 없어요."</string>
</resources>
